force-app/main/default/objects/Assessment_Template__c/Assessment_Template__c.object-meta.xml
<CustomObject>
    <description
  >Editable runtime assessment template used to drive Phase II welfare capture.</description>
    <label>Assessment Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>