force-app/main/default/objects/Assessment_Template__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Assessment context targeted by the template.</description>
    <inlineHelpText
  >Use the operational context in which the template should be applied.</inlineHelpText>
    <label>Context</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
                <default>true</default>
                <label>Routine</label>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>