force-app/main/default/objects/Assessment_Template__c/fields/Default_Context_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Context_Key__c</fullName>
    <description
  >System-maintained uniqueness key that prevents more than one active default template per species and context.</description>
    <label>Default Context Key</label>
    <length>150</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>