force-app/main/default/objects/Assessment_Template__c/fields/Default_For_Species__c.field-meta.xml
<CustomField>
    <fullName>Default_For_Species__c</fullName>
    <description
  >Marks the runtime template as the default for its species and context.</description>
    <label>Default For Species</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>