force-app/main/default/objects/Assessment_Template__c/fields/Is_Managed_Seed__c.field-meta.xml
<CustomField>
    <fullName>Is_Managed_Seed__c</fullName>
    <description
  >Distinguishes package-managed seed templates from subscriber-authored runtime templates.</description>
    <label>Is Managed Seed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>