force-app/main/default/objects/Assessment_Template__c/fields/Metadata_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Template_Key__c</fullName>
    <description
  >Stable packaged template key used for idempotent seed and upgrade sync.</description>
    <externalId>true</externalId>
    <label>Metadata Template Key</label>
    <length>100</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>