force-app/main/default/objects/Assessment_Template__c/fields/Seed_Last_Synced_On__c.field-meta.xml
<CustomField>
    <fullName>Seed_Last_Synced_On__c</fullName>
    <description
  >Timestamp of the last successful seed or upgrade sync from packaged defaults.</description>
    <label>Seed Last Synced On</label>
    <type>DateTime</type>
</CustomField>