force-app/main/default/objects/Assessment_Template__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Species targeted by the template.</description>
    <inlineHelpText
  >Use the species that should resolve to this template at runtime.</inlineHelpText>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Species</valueSetName>
    </valueSet>
</CustomField>