force-app/main/default/objects/Assessment_Template__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Runtime lifecycle state for the template.</description>
    <inlineHelpText
  >Only active templates are available for assessment entry.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>