force-app/main/default/objects/Assessment_Template__c/fields/Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Code__c</fullName>
    <description
  >Unique runtime template code used in admin maintenance and reports.</description>
    <label>Template Code</label>
    <length>100</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>