force-app/main/default/objects/Assessment_Template__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description
  >Version identifier preserved on completed assessments for historical traceability.</description>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>